crates/rudolint-cli/tests/snapshots/cli__directory_discovery_json_findings.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: output
---
[
  {
    "code": "RDL3007",
    "column": 1,
    "line": 1,
    "message": "avoid mutable latest base image tags",
    "path": "$TEMP/Dockerfile",
    "severity": "warning"
  },
  {
    "code": "RDL3006",
    "column": 1,
    "line": 1,
    "message": "base image should use an explicit tag or digest",
    "path": "$TEMP/service/Dockerfile.api",
    "severity": "warning"
  },
  {
    "code": "RDL3000",
    "column": 1,
    "line": 2,
    "message": "WORKDIR should be absolute",
    "path": "$TEMP/service/Dockerfile.api",
    "severity": "error"
  }
]
