crates/rudolint-cli/tests/snapshots/cli__discovered_config_json_findings.snap
---
source: crates/rudolint-cli/tests/cli.rs
assertion_line: 243
expression: output
---
[
  {
    "code": "RDL3007",
    "help": null,
    "labels": [],
    "message": "avoid mutable latest base image tags",
    "path": "$TEMP/service/Dockerfile",
    "primary_span": {
      "end_byte": 18,
      "end_column": 19,
      "end_line": 1,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 1
    },
    "severity": "warning"
  }
]
