crates/rudolint-cli/tests/snapshots/cli__explicit_config_precedence_json_findings.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: output
---
[
  {
    "code": "RDL3000",
    "help": null,
    "labels": [],
    "message": "WORKDIR should be absolute",
    "path": "$TEMP/Dockerfile",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "error"
  }
]
