crates/rudolint-cli/tests/snapshots/cli__fix_dry_run_human.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: output
---
rudolint found 2 findings in 1 file (1 error, 1 warning)

$TEMP/Dockerfile
  ! warning DL3007     1:1   avoid mutable latest base image tags
  x error   DL3000     2:1   WORKDIR should be absolute
fixes: dry-run mode is enabled; no fixes are currently available
