crates/rudolint-cli/tests/snapshots/cli__fix_dry_run_json.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: normalized_json(&output)
---
{
  "findings": [
    {
      "code": "RDK1000",
      "help": null,
      "labels": [],
      "message": "BuildKit features are used without an explicit # syntax directive",
      "path": "<stdin>",
      "primary_span": {
        "end_byte": 0,
        "end_column": 1,
        "end_line": 2,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 2
      },
      "severity": "info"
    }
  ],
  "fixes": [
    {
      "applicability": {
        "type": "safe"
      },
      "edits": [
        {
          "kind": {
            "content": "# syntax=docker/dockerfile:1\n",
            "type": "insert"
          },
          "span": {
            "column": 1,
            "length": 0,
            "line": 1
          }
        }
      ],
      "title": "insert BuildKit syntax directive"
    }
  ]
}
