crates/rudolint-cli/tests/snapshots/cli__fix_dry_run_manual_json_entrypoint.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: output
---
<stdin>:2:1: warning RDL3025 use exec/JSON form for CMD and ENTRYPOINT
fixes: dry-run mode is enabled; 1 fix(es) available
title: convert CMD to exec/JSON form
applicability: manual
edits:
