crates/rudolint-cli/tests/snapshots/cli__fix_dry_run_safe_preview.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: output
---
rudolint found 1 finding in 1 file (1 info)

i info    RDK1000  BuildKit features are used without an explicit # syntax directive
  1 finding in 1 file
  <stdin>:2:1
fixes: dry-run mode is enabled; 1 fix(es) available
title: insert BuildKit syntax directive
applicability: safe
edits:
- insert: line 1, column 1, content "# syntax=docker/dockerfile:1\n"
